package com.dpk;

public interface PlayerStrategy {
    void makeMove(GameService gameService);
}
